--- a/test_topology.conf
+++ b/test_topology.conf
@@ -3,54 +3,82 @@ vswitch { dpid "0x2" }
 vswitch { dpid "0x3" }
 vswitch { dpid "0x4" }
 vswitch { dpid "0x5" }
-
-vhost ("host1"){
+vswitch { dpid "0x6" }
+vswitch { dpid "0x7" }
+vswitch { dpid "0x8" }
+vswitch { dpid "0x9" }
+vhost("host1"){
  ip "192.168.0.1"
  netmask "255.255.0.0"
- mac "00:00:00:01:00:01"
+ mac "00:00:00:00:00:00"
 }
+
 vhost("host2"){
  ip "192.168.0.2"
- netmask "255.255.0.1"
- mac "00:00:00:01:01:01"
+ netmask "255.255.0.0"
+ mac "00:00:00:00:00:01"
 }
+
 vhost("host3"){
  ip "192.168.0.3"
- netmask "255.255.0.2"
- mac "00:00:00:01:02:01"
+ netmask "255.255.0.0"
+ mac "00:00:00:00:00:02"
 }
+
 vhost("host4"){
  ip "192.168.0.4"
- netmask "255.255.0.3"
- mac "00:00:00:01:03:01"
+ netmask "255.255.0.0"
+ mac "00:00:00:00:00:03"
 }
+
 vhost("host5"){
  ip "192.168.0.5"
- netmask "255.255.0.4"
- mac "00:00:00:01:04:01"
+ netmask "255.255.0.0"
+ mac "00:00:00:00:00:04"
 }
 
-link "0x1", "0x2"
-link "0x1", "0x3"
-link "0x1", "0x4"
-link "0x1", "0x5"
-link "0x2", "0x3"
-link "0x2", "0x4"
-link "0x2", "0x5"
-link "0x3", "0x4"
-link "0x3", "0x5" 
-link "0x4", "0x5" 
-link "0x1", "host1" 
-link "0x2", "host2"
-link "0x3", "host3"
-link "0x4", "host4"
-link "0x5", "host5"
- 
+vhost("host6"){
+ ip "192.168.0.6"
+ netmask "255.255.0.0"
+ mac "00:00:00:00:00:05"
+}
 
+vhost("host7"){
+ ip "192.168.0.7"
+ netmask "255.255.0.0"
+ mac "00:00:00:00:00:06"
+}
 
+vhost("host8"){
+ ip "192.168.0.8"
+ netmask "255.255.0.0"
+ mac "00:00:00:00:00:07"
+}
 
-### Local variables:
-### mode: Ruby
-### coding: utf-8-unix
-### indent-tabs-mode: nil
-### End:
+vhost("host9"){
+ ip "192.168.0.9"
+ netmask "255.255.0.0"
+ mac "00:00:00:00:00:08"
+}
+
+link "0x1","0x2"
+link "0x1","0x4"
+link "0x2","0x3"
+link "0x2","0x5"
+link "0x3","0x6"
+link "0x4","0x5"
+link "0x4","0x7"
+link "0x5","0x6"
+link "0x5","0x8"
+link "0x6","0x9"
+link "0x7","0x8"
+link "0x8","0x9"
+link "0x1","host1"
+link "0x2","host2"
+link "0x3","host3"
+link "0x4","host4"
+link "0x5","host5"
+link "0x6","host6"
+link "0x7","host7"
+link "0x8","host8"
+link "0x9","host9"
